Added Purchasing DB and added LINQ calls for Purcahsing Printout

--- a/Fast_Report_API/Views/Home/ReportView.cshtml
+++ b/Fast_Report_API/Views/Home/ReportView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fast_Report_API.Models.ReportModel;
+﻿@model Fast_Report_API.Models.PrintOutModels.ReportModel;
 @{
     ViewData["Title"] = "Report View";
     var resp1 = ViewBag.Resp;
