Changed: all residency list variable into global

--- a/Fast_Report_API/Views/Home/Index.cshtml
+++ b/Fast_Report_API/Views/Home/Index.cshtml
@@ -12,5 +12,5 @@
 
 
 <div>
-    <a asp-action="Generate" target="_blank">Generate</a>
+@*     <a asp-action="Generate" target="_blank">Generate</a> *@
 </div>
